force-app/main/default/objects/skilljar__Vilt_Session_Registration__c/skilljar__Vilt_Session_Registration__c.object-meta.xml
<CustomObject>
    <label>Vilt Session Registration</label>
    <nameField>
        <label>Vilt Session Registration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vilt Session Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>