force-app/main/default/objects/skilljar__Vilt_Session_Registration__c/fields/skilljar__Attended__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attended</label>
    <type>Checkbox</type>
</CustomField>