force-app/main/default/objects/skilljar__Vilt_Session_Registration__c/fields/skilljar__Lesson_Progress__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Lesson_Progress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lesson Progress</label>
    <referenceTo>skilljar__Lesson_Progress__c</referenceTo>
    <relationshipLabel>Vilt Session Registrations</relationshipLabel>
    <relationshipName>Vilt_Session_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>