force-app/main/default/objects/skilljar__Vilt_Session_Registration__c/fields/skilljar__Student__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>skilljar__Student__c</referenceTo>
    <relationshipLabel>Vilt Session Registrations</relationshipLabel>
    <relationshipName>Vilt_Session_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>