force-app/main/default/objects/skilljar__Vilt_Session_Registration__c/fields/skilljar__Vilt_Session_Event__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Vilt_Session_Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vilt Session Event</label>
    <referenceTo>skilljar__Vilt_Session_Event__c</referenceTo>
    <relationshipLabel>Vilt Session Registrations</relationshipLabel>
    <relationshipName>Vilt_Session_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>